[gd_scene load_steps=4 format=3 uid="uid://cquisj7vtrreh"]

[ext_resource type="Script" uid="uid://by1rr6kulop7p" path="res://src/gui/driving/drivingInterface.gd" id="1_inayc"]

[sub_resource type="Gradient" id="Gradient_47t6m"]
offsets = PackedFloat32Array(0.285124, 0.92562)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_inayc"]
gradient = SubResource("Gradient_47t6m")

[node name="DrivingInterface" type="CanvasLayer"]
script = ExtResource("1_inayc")

[node name="Grid" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -282.0
offset_right = 576.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
columns = 2

[node name="TopLeft" type="VBoxContainer" parent="Grid"]
custom_minimum_size = Vector2(500, 280)
layout_mode = 2
size_flags_horizontal = 0

[node name="TimeContainer" type="CenterContainer" parent="Grid/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="TimeMargin" type="MarginContainer" parent="Grid/TopLeft/TimeContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 24

[node name="TimeRect" type="TextureRect" parent="Grid/TopLeft/TimeContainer/TimeMargin"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
texture = SubResource("GradientTexture1D_inayc")

[node name="TimeInformation" type="HBoxContainer" parent="Grid/TopLeft/TimeContainer/TimeMargin/TimeRect"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
offset_right = 262.0
offset_bottom = 60.0

[node name="TimeT" type="Label" parent="Grid/TopLeft/TimeContainer/TimeMargin/TimeRect/TimeInformation"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.911531, 0.901298, 0.943314, 1)
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 36
text = "T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeCount" type="Label" parent="Grid/TopLeft/TimeContainer/TimeMargin/TimeRect/TimeInformation"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0:00.000"
vertical_alignment = 1

[node name="Lap1Container" type="CenterContainer" parent="Grid/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Lap1Rect" type="TextureRect" parent="Grid/TopLeft/Lap1Container"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
texture = SubResource("GradientTexture1D_inayc")

[node name="Lap1Information" type="HBoxContainer" parent="Grid/TopLeft/Lap1Container/Lap1Rect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LapCount" type="Label" parent="Grid/TopLeft/Lap1Container/Lap1Rect/Lap1Information"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.152941, 0.619608, 0.776471, 1)
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "1"
horizontal_alignment = 1

[node name="Lap1Time" type="Label" parent="Grid/TopLeft/Lap1Container/Lap1Rect/Lap1Information"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0:00.000"
vertical_alignment = 1

[node name="Lap2Container" type="CenterContainer" parent="Grid/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Lap2Rect" type="TextureRect" parent="Grid/TopLeft/Lap2Container"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
texture = SubResource("GradientTexture1D_inayc")

[node name="Lap2Information" type="HBoxContainer" parent="Grid/TopLeft/Lap2Container/Lap2Rect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LapCount" type="Label" parent="Grid/TopLeft/Lap2Container/Lap2Rect/Lap2Information"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.862248, 0.340775, 0.668064, 1)
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "2"
horizontal_alignment = 1

[node name="Lap2Time" type="Label" parent="Grid/TopLeft/Lap2Container/Lap2Rect/Lap2Information"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0:00.000"
vertical_alignment = 1

[node name="Lap3Container" type="CenterContainer" parent="Grid/TopLeft"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Lap3Rect" type="TextureRect" parent="Grid/TopLeft/Lap3Container"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
texture = SubResource("GradientTexture1D_inayc")

[node name="Lap3Information" type="HBoxContainer" parent="Grid/TopLeft/Lap3Container/Lap3Rect"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LapCount" type="Label" parent="Grid/TopLeft/Lap3Container/Lap3Rect/Lap3Information"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.80156, 0.643529, 0.938177, 1)
theme_override_constants/paragraph_spacing = 0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1

[node name="Lap3Time" type="Label" parent="Grid/TopLeft/Lap3Container/Lap3Rect/Lap3Information"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0:00.000"
vertical_alignment = 1

[node name="TopRight" type="VBoxContainer" parent="Grid"]
custom_minimum_size = Vector2(648, 280)
layout_mode = 2

[node name="BottomLeft" type="VBoxContainer" parent="Grid"]
custom_minimum_size = Vector2(100, 280)
layout_mode = 2

[node name="BottomRight" type="VBoxContainer" parent="Grid"]
custom_minimum_size = Vector2(648, 280)
layout_mode = 2
